--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -6,5 +6,9 @@
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "mnemonic.html"
-  }
+  },
+  "background": {
+    "page": "background.html"
+  },
+  "permissions": ["clipboardWrite"]
 }
